--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
         <a target="_blank" href="https://diegoolivei.github.io/PaginaCaptura/"><h2 class="listafinal">Pagina de Captura</h2></a>
     </ul>
     <h1 class="instaFeitos">Instagrans</h1>
-    <a target="_blank" href="https://www.instagram.com/cogood.cogu/?hl=pt-br"><h2 class="insta2">Cogood</h2>
+    <a target="_blank" href="https://www.instagram.com/cogood.cogu/?hl=pt-br"><h2 class="insta2">Cogood</h2></a>
         <img class="instaCogood" src="instaCogood.png">
         <ul>
             <li class="cogood">VideoMaker</li>
             <li class="cogood">Estrategista de Conteúdo</li>
             <li class="cogood">Gestor de Tráfego</li>
         </ul>
-    <a target="_blank" href="https://www.instagram.com/stabpokerteam/?hl=pt-br"></a><h2 class="insta3">Stab Poker Team</h2>
+    <a target="_blank" href="https://www.instagram.com/stabpokerteam/?hl=pt-br"><h2 class="insta3">Stab Poker Team</h2></a>
     <img class="instaStab" src="InstaStab.png">
     <ul>
         <li class="stab">VideoMaker</li>
